[package]
name = "coronabob"
version = "1.0.0"
authors = ["z16"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
async-std = "1.5.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"

